Fixed frontend developer job ad (#357)
* Fixed frontend developer job ad

* Fixed too long lines issues

* whitespace issues + too long line fixed

* unknown line indicator fixed

* trailing white space fixed. I hope.

--- a/source/stylesheets/layouts/_l-job-offers.scss
+++ b/source/stylesheets/layouts/_l-job-offers.scss
@@ -247,6 +247,10 @@
     .job-description {
       margin: 0 auto;
       max-width: 805px;
+
+      &.large {
+        max-width: 950px;
+      }
     }
 
     .job-title {
